k8s/nird/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: elixir-uit-ns11105k
  annotations:
    appstore.uninett.no/contact_email: joshua.baskaran@uit.no
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - status.elixir-uit.sigma2.no
      secretName: wildcard-tls
  rules:
    - host: status.elixir-uit.sigma2.no
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
